src/styles/base.sass
@import includes
@import colors

*,
*::before,
*::after
  box-sizing: border-box

html
  width: 100%
  height: 100%

body
  margin: 0
  padding: 0

  width: 100%
  height: 100%

  background: $black

  font-family: 'Manrope Variable'
  -moz-osx-font-smoothing: grayscale
  -webkit-font-smoothing: antialiased


#app
  .panels-layout
    position: absolute
    z-index: 1

